--- a/practica-css.html
+++ b/practica-css.html
@@ -4,51 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="practica-css.css">
     <title>Practica Css</title>
 </head>
 <body>
-    <header>
-        <h1>Titulo</h1>
-        <nav>
-            <a href="#">Enlace</a>
-            <a href="#">Enlace</a>
-            <a href="#">Enlace</a>
-            <a href="#">Enlace</a>
+    <header class="header">
+        <h1 class="header__h1">Titulo</h1>
+        <nav class="menu">
+            <a class="menu__a" href="#">Enlace</a>
+            <a class="menu__a" href="#">Enlace</a>
+            <a class="menu__a" href="#">Enlace</a>
+            <a class="menu__a" href="#">Enlace</a>
         </nav>
     </header>
     <main>
-        <section>
-            <h2 class="titulo-h2">Titulo</h2>
-            <p id="parrafo-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, a adipisci praesentium ex provident neque ea est delectus beatae natus nostrum, corporis unde veritatis. Cum ducimus reprehenderit explicabo aliquid totam!</p>
-            <button>Boton</button>
-            <input campo="wey" type="text">
-        </section>
         <div class="container">
             <h2 class="container__h2">Titulo 2</h2>
+            <span class="container__span">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis non nostrum voluptatum ducimus sapiente mollitia veniam dicta odio perspiciatis consectetur. Et quasi accusamus eveniet earum laboriosam saepe enim modi distinctio?</span>
             <p class="container__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, minus iste! Architecto sequi a ipsam, dolorum laudantium dolor cupiditate perspiciatis illo at reprehenderit harum consequuntur voluptatum consequatur doloribus, iusto nam!</p>
             <p class="container__p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni eligendi minima unde officiis beatae tenetur corrupti tempora vel harum, expedita alias cumque suscipit est eius! Et tenetur saepe delectus nihil.</p>
-            <div class="container__div">
-                <h3 class="container__div-h3">Titulo 3</h3>
-                <ol class="container__div-ol">
-                    <li class="container__div-ol-li">lista</li>
-                    <li class="container__div-ol-li">lista</li>
-                    <li class="container__div-ol-li">lista</li>
-                    <li class="container__div-ol-li">lista</li>
-                </ol>
-            </div>
-            <div class="container__form">
+            <form class="container__form">
                 <h3 class="container__form-h3">Titulo</h3>
-                <input type="text" class="container__form-input--special" ><br>
+                <label for="">Nombre</label>
                 <input type="text" class="container__form-input" ><br>
+                <label for="">Apellido</label>
                 <input type="text" class="container__form-input" ><br>
+                <label for="">Asunto</label>
                 <input type="text" class="container__form-input" ><br>
-                <input type="password" class="container__form-input" >
-                <p class="container__form-p">
-                    <h3 class="container__form-p-h3">Titulo</h3>
-                </p>
+                <label for="">Mensaje</label>
+                <input type="text" class="container__form-input" ><br>
+                <input type="submit" class="container__form-input--submit">
+            </form>
+        </div>
+        <div class="position-container">
+
+            <div class="position-container__div--one">
+                Caja 1
+            </div>  
+
+            <div class="position-container__div--two">
+                Caja 2
             </div>
+
+            <div class="position-container__div--three">
+                Caja 3
+            </div>
+
+            <div class="position-container__div--four">
+                Caja 4
+            </div>   
+        </div>
+                 
+        <div class="position-container__div--five">
+            Caja 5
         </div>
     </main>
+    <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br>
 </body>
 </html>
