--- a/practica-css.html
+++ b/practica-css.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="practica-css.css">
     <title>Practica Css</title>
 </head>
-<body>
+<body>      
     <header class="header">
         <h1 class="header__h1">Titulo</h1>
         <nav class="menu">
@@ -39,7 +39,9 @@
             </form>
         </div>
         <div class="position-container">
-
+            <div class="position-container__div--five">
+                Caja 5
+            </div>
             <div class="position-container__div--one">
                 Caja 1
             </div>  
@@ -56,11 +58,52 @@
                 Caja 4
             </div>   
         </div>
-                 
-        <div class="position-container__div--five">
-            Caja 5
+        <br>
+        <div class="display-container">
+            <div class="display-container__div--one">Caja1</div>
+            <div class="display-container__div--two">Caja2</div>
+            <div class="display-container__div--three">Caja3</div>
+            <div class="display-container__div--four">Caja4</div>
         </div>
+        <br>
+        <div class="overflow-container">
+            <h2 class="overflow-container__h2">Lorem ipsum dolor...</h2>
+            <p class="overflow-container__p">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis delectus suscipit distinctio nam. Harum, dolorum officiis earum perferendis voluptates omnis esse quam aliquam illum, recusandae, assumenda molestiae cum aut sed!
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea explicabo quam unde est recusandae! Veniam aliquid recusandae provident dolorum non. Adipisci ab, expedita numquam omnis fugit eaque nesciunt consequatur labore.lo
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sunt, possimus laborum eius quasi nobis odit incidunt! Minus et quae magnam saepe. Impedit, enim minima nobis pariatur doloremque unde quisquam?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore, sunt quae. Libero inventore aspernatur illum maiores consequuntur pariatur sint a distinctio eum. Assumenda mollitia sed in, excepturi ratione veniam autem.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, natus debitis non repellat facilis explicabo laudantium alias nisi quas! Aliquid doloremque temporibus, deleniti quis inventore architecto a aperiam qui quas?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo deleniti maiores aperiam nisi tempore iusto officiis consequuntur cumque odio corporis recusandae, ullam suscipit eligendi. Illum voluptatum vitae consectetur repudiandae quo.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis delectus suscipit distinctio nam. Harum, dolorum officiis earum perferendis voluptates omnis esse quam aliquam illum, recusandae, assumenda molestiae cum aut sed!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo deleniti maiores aperiam nisi tempore iusto officiis consequuntur cumque odio corporis recusandae, ullam suscipit eligendi. Illum voluptatum vitae consectetur repudiandae quo.
+            </p>
+        </div>
+        <div class="float-container">
+            <div class="float-container__div--one">
+                <img class="float-container__div--one-img" src="https://images.clarin.com/2020/12/28/la-luna-llena-en-libra___iTi0-tihj_640x361__1.jpg" alt="">
+                <p class="float-container__div--one-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo suscipit quo voluptas soluta quidem. Nesciunt pariatur itaque repellendus vero placeat aut cupiditate ab nobis rem? Recusandae dignissimos eligendi hic doloremque!</p>
+            </div>
+            <div class="float-container__div--two">
+                <img class="float-container__div--two-img" src="https://images.clarin.com/2020/12/28/la-luna-llena-en-libra___iTi0-tihj_640x361__1.jpg" alt="">
+                <p class="float-container__div--two-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo suscipit quo voluptas soluta quidem. Nesciunt pariatur itaque repellendus vero placeat aut cupiditate ab nobis rem? Recusandae dignissimos eligendi hic doloremque!</p>
+            </div>
+            <div class="float-container__div--three">
+                <img class="float-container__div--three-img" src="https://images.clarin.com/2020/12/28/la-luna-llena-en-libra___iTi0-tihj_640x361__1.jpg" alt="">
+                <p class="float-container__div--three-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo suscipit quo voluptas soluta quidem. Nesciunt pariatur itaque repellendus vero placeat aut cupiditate ab nobis rem? Recusandae dignissimos eligendi hic doloremque!</p>
+            </div>
+            <div class="float-container__div--four">
+                <img class="float-container__div--four-img" src="https://images.clarin.com/2020/12/28/la-luna-llena-en-libra___iTi0-tihj_640x361__1.jpg" alt="">
+                <p class="float-container__div--four-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo suscipit quo voluptas soluta quidem. Nesciunt pariatur itaque repellendus vero placeat aut cupiditate ab nobis rem? Recusandae dignissimos eligendi hic doloremque!</p>
+            </div>
+        </div>
+        <div class="pseudo-classes-container">
+            <p class="pseudo-classes-container__p">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, a adipisci? Atque ut doloremque enim perferendis at et sint facilis praesentium, molestiae commodi pariatur voluptate repellat? Doloremque dolores sequi sit.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic itaque iusto veniam fugiat, dolorem id culpa possimus eligendi! Nisi facere aliquid nulla eum rem dicta mollitia harum sed nobis excepturi.
+            </p>
+        </div>       
     </main>
-    <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br> <br><br><br>
+   <br><br><br>
 </body>
 </html>
