--- a/practica-css.html
+++ b/practica-css.html
@@ -97,12 +97,34 @@
                 <p class="float-container__div--four-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo suscipit quo voluptas soluta quidem. Nesciunt pariatur itaque repellendus vero placeat aut cupiditate ab nobis rem? Recusandae dignissimos eligendi hic doloremque!</p>
             </div>
         </div>
-        <div class="pseudo-classes-container">
-            <p class="pseudo-classes-container__p">
+        <div class="pseudo-elements-container">
+            <p class="pseudo-elements-container__p--one">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, a adipisci? Atque ut doloremque enim perferendis at et sint facilis praesentium, molestiae commodi pariatur voluptate repellat? Doloremque dolores sequi sit.
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic itaque iusto veniam fugiat, dolorem id culpa possimus eligendi! Nisi facere aliquid nulla eum rem dicta mollitia harum sed nobis excepturi.
             </p>
-        </div>       
+            <input placeholder="qlq" class="pseudo-elements-container__input" type="text">
+            <p class="pseudo-elements-container__p--two">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, consectetur. Optio suscipit adipisci voluptate totam eius, illum minima tempore nulla odio vero temporibus? Eveniet magni corporis quasi neque, ducimus asperiores.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, reiciendis accusamus hic nulla a, consequatur exercitationem possimus quidem maiores atque dolores ratione non consequuntur magni repellendus soluta libero sequi quo!
+            </p>
+        </div>
+        <div class="pseudo-classes-container">
+            <a class="pseudo-classes-container__a--one" href="#">Inicio</a>
+            <a class="pseudo-classes-container__a--two" href="https://web.whatsapp.com/">Whatsapp</a>
+            <a class="pseudo-classes-container__a--three" href="https://www.facebook.com/messages/t/100008188358401/">Messenger</a>
+            <a class="pseudo-classes-container__a--four" href="https://github.com/">git hub</a>
+            <br><br>
+            <input class="pseudo-classes-container__input" type="text">
+            <p class="pseudo-classes-container__p">
+                <b lang="en">Hello how are you?</b> 
+                <b lang="es">Hola todo bien?</b>
+            </p>
+        </div>
+        <br><br>
+        <div class="object-fill-container">            
+            <img class="object-fill-container__img" src="https://images.clarin.com/2020/12/28/la-luna-llena-en-libra___iTi0-tihj_640x361__1.jpg" alt="">
+        </div>
+        <div class="cursor-container"></div>
     </main>
    <br><br><br>
 </body>
