--- a/practica-css.html
+++ b/practica-css.html
@@ -125,6 +125,7 @@
             <img class="object-fill-container__img" src="https://images.clarin.com/2020/12/28/la-luna-llena-en-libra___iTi0-tihj_640x361__1.jpg" alt="">
         </div>
         <div class="cursor-container"></div>
+        <div class="color-container"></div>
     </main>
    <br><br><br>
 </body>
