--- a/responsive.html
+++ b/responsive.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <lisnk href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-    <lsink rel="stylesheet" href="normalize.css">
+    <linsk href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <lisnk rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="responsive.css">
-    <sscript src="https://kit.fontawesome.com/79dee7f4ad.js" crossorigin="anonymous"></script>
+    <scrsipt src="https://kit.fontawesome.com/79dee7f4ad.js" crossorigin="anonymous"></script>
     <title>Responsive</title>
 </head>
-<body><!--
+<body>
+    <!--
     <main class="flexbox-container">
         <section class="flexbox-container__section">
             <div class="flexbox-container__section-div--one">FlexBox</div>
@@ -88,10 +89,61 @@
         <div class="grid-container-item grid-footer">Footer</div>
     </div> -->
 
-    <div class="responsive">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iusto iure laborum saepe, cumque rem, aspernatur enim tempora ex molestiae quia voluptatum. Tempore laboriosam enim, facere nulla ullam facilis et.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum consequatur magnam fugiat velit voluptas in. Vel, distinctio. Blanditiis, culpa. Molestias expedita mollitia velit ex possimus minima est voluptate magnam nesciunt.
+    <!-- <div class="responsive">
+        <div class="responsive-header">
+            <h1>Hola mundo</h1>
+            <nav>
+                <a href="#">Enlace</a>
+                <a href="#">Enlace</a>
+                <a href="#">Enlace</a>
+                <a href="#">Enlace</a>
+            </nav>
+        </div>   
+        <div class="responsive-main">
+            <h2>Titulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio repellendus perferendis aliquid nam, natus cumque aspernatur vero illum quasi, voluptate quibusdam! Optio illo libero ratione et repellat possimus perspiciatis iusto!</p>
+            <h2>Titulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio repellendus perferendis aliquid nam, natus cumque aspernatur vero illum quasi, voluptate quibusdam! Optio illo libero ratione et repellat possimus perspiciatis iusto!</p>
+            <h2>Titulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio repellendus perferendis aliquid nam, natus cumque aspernatur vero illum quasi, voluptate quibusdam! Optio illo libero ratione et repellat possimus perspiciatis iusto!</p>
+        </div>
+        <div class="responsive-aside">
+            <h3>Titulo</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, cupiditate. Ducimus sapiente provident, mollitia reprehenderit dolorem ut quod officiis placeat iusto dignissimos repellendus recusandae nemo blanditiis molestias quas, sunt commodi?</p>
+        </div>
+        <div class="responsive-footer">
+            <h4>Titulo</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto officia inventore ea nostrum accusamus neque voluptatum suscipit aliquid. Deleniti, consequatur recusandae officia quaerat architecto optio voluptatibus id aspernatur modi soluta?</p>
+        </div>
+    </div> -->
+
+    <!-- <div class="transition-container">
+        <div class="transition-container__div"></div>
+        <div class="transition-container__div"></div>
+        <div class="transition-container__div"></div>
+        <div class="transition-container__div"></div>
+        <div class="transition-container__div"></div>
+        <div class="transition-container__div"></div>
+        <div class="transition-container__div"></div>
+    </div> -->
+
+    <!-- <div class="animation-container">
+        <div class="animation-container__div"></div>
+    </div> -->
+
+    <!-- <div class="transform-container">
+        <div class="transform-container__div"></div>
+    </div> -->
+
+    <!-- <div class="background-container">
+        <div class="background-container__div"></div>
+    </div> -->
+
+    <div class="variables-container">
+        <div class="variables-container__div--one"></div>
+        <div class="variables-container__div--two"></div>
     </div>
+
 
 
 </body>
